[package]
name = "server-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.0.0-beta.19"
actix-session = { version = "0.6.2", features = ["cookie-session"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
mime = "0.3.16"
thiserror = "1.0.30"
dotenv = "0.15.0"
actix-files = "0.6.0"
async-minecraft-ping = "0.8.0"
